Bug 1090 - __initstate_r uses uninitialized state
Summary: __initstate_r uses uninitialized state
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.3.5
: P2 normal
Target Milestone: ---
Assignee: Roland McGrath
URL:
Keywords:
Depends on:
Blocks: libc236
  Show dependency treegraph
 
Reported: 2005-07-18 02:38 UTC by Roland McGrath
Modified: 2005-07-19 03:30 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland McGrath 2005-07-18 02:38:19 UTC
This trunk patch should go into the 2.3 branch:

2005-04-12  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/random_r.c (__initstate_r): Don't use non-existing state.
	* string/tst-strfry.c: New file.
	* string/Makefile (tests): Add tst-strfry.
Comment 1 Sourceware Commits 2005-07-18 02:39:27 UTC
Subject: Bug 1090

CVSROOT:	/cvs/glibc
Module name:	libc
Branch: 	glibc-2_3-branch
Changes by:	roland@sources.redhat.com	2005-07-18 02:39:14

Modified files:
	string         : Makefile 
	stdlib         : random_r.c 
Added files:
	string         : tst-strfry.c 

Log message:
	2005-04-12  Ulrich Drepper  <drepper@redhat.com>
	
	[BZ #1090]
	* stdlib/random_r.c (__initstate_r): Don't use non-existing state.
	* string/tst-strfry.c: New file.
	* string/Makefile (tests): Add tst-strfry.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/string/tst-strfry.c.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=NONE&r2=1.1.4.1
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/string/Makefile.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=1.65&r2=1.65.2.1
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/stdlib/random_r.c.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=1.18.4.1&r2=1.18.4.2

Comment 2 Roland McGrath 2005-07-19 03:30:23 UTC
This fix is now in the 2.3 branch as well as the trunk, and the problem should
be resolved as of the 2.3.6 release.